# mask_rcnn_ros

./: package.xml
launch/: mask_rcnn_node.launch
notebooks/: AI2THOR Inference.ipynb
scripts/: mask_rcnn_node.py
src/mask_rcnn_ros/: config.py  model.py  ros_bridge.py  visualization.py
